# pvp-biplanes

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: main.cpp
common/: CMakeLists.txt
common/include/: interpolator.hpp  logger.hpp  predictor.hpp  protocol.hpp
core/: CMakeLists.txt
core/include/: bot.hpp  bullet.hpp  constants.hpp  math.hpp  plane.hpp  timer.hpp  types.hpp  world.hpp
core/src/: bot.cpp  bullet.cpp  math.cpp  plane.cpp  timer.cpp  world.cpp
ios/Biplanes Fight/Biplanes Fight/: ConnectionStateViewController.swift  LaunchViewController.swift  MainMenuViewController.swift  SceneDelegate.swift
ios/Biplanes Fight/Biplanes Fight.xcodeproj/: project.pbxproj
ios/Biplanes Fight/Biplanes Fight/Core/: BiplanesBridge.h  BiplanesBridge.mm
ios/Biplanes Fight/Biplanes Fight/Game/: GameScene.swift  GameViewController.swift
ios/Biplanes Fight/Biplanes Fight/Game/Controls/: TouchControls.swift
ios/Biplanes Fight/Biplanes Fight/Resources/: Info.plist
ios/PvP Biplanes/PvP Biplanes/: AppDelegate.swift  AudioManager.swift  BiplanesBridge.h  BiplanesBridge.mm  GameScene.swift  GameViewController.swift  Info.plist  LaunchViewController.swift  MainMenuViewController.swift  MenuViewController.swift  PvP Biplanes-Bridging-Header.h  SceneDelegate.swift  TouchControls.swift
ios/PvP Biplanes/PvP Biplanes.xcodeproj/: project.pbxproj
ios/PvP Biplanes/PvP Biplanes/Assets.xcassets/backround_1.imageset/: Contents.json
ios/PvP Biplanes/PvP Biplanes/Assets.xcassets/backround_2.imageset/: Contents.json
ios/PvP Biplanes/PvP Biplanes/Assets.xcassets/barn.imageset/: Contents.json
ios/PvP Biplanes/PvP Biplanes/Assets.xcassets/bullet.imageset/: Contents.json
ios/PvP Biplanes/PvP Biplanes/Assets.xcassets/green_biplane.imageset/: Contents.json
ios/PvP Biplanes/PvP Biplanes/Assets.xcassets/parachute.imageset/: Contents.json
ios/PvP Biplanes/PvP Biplanes/Core/: BiplanesBridge.h  BiplanesBridge.mm
ios/PvP Biplanes/PvP Biplanes/Game/: GameScene.swift  GameViewController.swift
ios/PvP Biplanes/PvP Biplanes/Game/Audio/: AudioManager.swift
ios/src/: AppDelegate.swift  Biplanes-Bridging-Header.h  BiplanesBridge.h  BiplanesBridge.mm  GameScene.swift  GameViewController.swift  Info.plist  TouchControls.swift
scripts/: build_ios_libs.sh  extract_sprites.py
server/: CMakeLists.txt
server/src/: main.cpp
(+4 files in other folders)
